# swii

./: .gitignore  README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_wrapper.rs  devtools.rs  editor_config.rs  lib.rs  logger.rs  macos_accessibility.rs  macos_window.rs  main.rs  title_parser.rs  types.rs  window_focus.rs  window_list.rs
src/lib/app/: config.ts
src/lib/fuse/: config.ts
src/lib/stores/: dev-errors.svelte.ts  editor-windows.svelte.ts  overlay.svelte.ts  search.svelte.ts
src/lib/tauri/: client.ts  commands.ts
src/lib/ui/: DevErrorBadge.svelte  EmptyState.svelte  FooterBar.svelte  FooterLabel.svelte  Icon.svelte  ListItem.svelte  NavList.svelte
src/lib/utils/: errorHandler.ts  guards.ts  logger.ts  tryCatch.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/components/: EditorSearchBar.svelte  EditorWindowItem.svelte  EditorWindowsList.svelte
